// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SlideIn /> should animate entering from bottom with fade in 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(0, 100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from bottom with fade inout 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(0, 100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from bottom with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(0, 100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from bottom with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(0, 100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from left with fade in 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(-100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from left with fade inout 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(-100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from left with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(-100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from left with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(-100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from right with fade in 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from right with fade inout 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from right with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from right with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(100%, 0, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from top with fade in 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(0, -100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from top with fade inout 1`] = `
{
  "0%": {
    "opacity": 0,
    "transform": "translate3d(0, -100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from top with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(0, -100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate entering from top with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "translate3d(0, -100%, 0)",
  },
  "100%": {
    "opacity": 1,
    "transform": "none",
  },
}
`;

exports[`<SlideIn /> should animate exiting from bottom with fade in 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(0, 100%, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from bottom with fade inout 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(0, 100%, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from bottom with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(0, 100%, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from bottom with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(0, 100%, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from left with fade in 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(-100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from left with fade inout 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(-100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from left with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(-100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from left with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(-100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from right with fade in 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from right with fade inout 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from right with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from right with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(100%, 0, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from top with fade in 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(0, -100%, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from top with fade inout 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(0, -100%, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from top with fade none 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 1,
    "transform": "translate3d(0, -100%, 0)",
  },
}
`;

exports[`<SlideIn /> should animate exiting from top with fade out 1`] = `
{
  "0%": {
    "opacity": 1,
    "transform": "none",
  },
  "100%": {
    "opacity": 0,
    "transform": "translate3d(0, -100%, 0)",
  },
}
`;
